--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,6 +16,10 @@ end
 
 target 'MapSearch' do
   config = use_native_modules!
+  pod 'GoogleMaps'
+  pod 'Google-Maps-iOS-Utils'
+  rn_maps_path = '../node_modules/react-native-maps'
+  pod 'react-native-maps/Google', :path => rn_maps_path
 
   use_react_native!(
     :path => config[:reactNativePath],
