--- a/package.json
+++ b/package.json
@@ -13,14 +13,10 @@
     "@react-native/new-app-screen": "0.80.2",
     "@react-navigation/native": "^7.1.16",
     "@react-navigation/native-stack": "^7.3.23",
-    "axios": "^1.11.0",
     "react": "19.1.0",
     "react-native": "0.80.2",
-    "react-native-geolocation-service": "^5.3.1",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-maps": "^1.24.13",
-    "react-native-permissions": "^5.4.2",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1"
   },
@@ -46,5 +42,6 @@
   },
   "engines": {
     "node": ">=18"
-  }
+  },
+  "packageManager": "yarn@3.6.4+sha512.e70835d4d6d62c07be76b3c1529cb640c7443f0fe434ef4b6478a5a399218cbaf1511b396b3c56eb03bc86424cff2320f6167ad2fde273aa0df6e60b7754029f"
 }
